changes button text

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -15,7 +15,7 @@
     "weAre": "We are",
     "text": "A collective of creative minds located in Brazil with an international mindset.",
     "primaryButton": "Get in touch",
-    "ghostButton": "See our work"
+    "ghostButton": "OSur work"
   },
   "whatWeDo": {
     "title": "What we do",
