--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -15,7 +15,7 @@
     "weAre": "Somos",
     "text": "Un colectivo de mentes creativas localizado en Brasil, con una mentalidad internacional.",
     "primaryButton": "Entre en contacto",
-    "ghostButton": "Vea nuestro trabajo"
+    "ghostButton": "Nuestro trabajo"
   },
   "whatWeDo": {
     "title": "Qué hacemos",
