--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -15,7 +15,7 @@
     "weAre": "Nós somos a",
     "text": "Um coletivo de mentes criativas localizado no Brasil com um mindset internacional.",
     "primaryButton": "Entre em contato",
-    "ghostButton": "Conheça nosso trabalho"
+    "ghostButton": "Nosso trabalho"
   },
   "whatWeDo": {
     "title": "O que fazemos",
