add portfolio items

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -33,5 +33,8 @@
   "Your name": "Your name",
   "Your email": "Your email",
   "Your message": "Your message",
-  "Send": "Send"
+  "Send": "Send",
+  "Role": "Role",
+  "Team": "Team",
+  "Finished date": "Finished date"
 }
