--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -33,5 +33,8 @@
   "Your name": "Seu nome",
   "Your email": "Seu email",
   "Your message": "Sua mensagem",
-  "Send": "Enviar"
+  "Send": "Enviar",
+  "Role": "Áreas",
+  "Team": "Equipe",
+  "Finished date": "Data de entrega"
 }
