--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -36,5 +36,6 @@
   "Send": "Send",
   "Role": "Role",
   "Team": "Team",
-  "Finished date": "Finished date"
+  "Finished date": "Finished date",
+  "Message sent successfully.": "Message sent successfully."
 }
