--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -36,5 +36,6 @@
   "Send": "Enviar",
   "Role": "Areas",
   "Team": "Equipo",
-  "Finished date": "Fecha de entrega"
+  "Finished date": "Fecha de entrega",
+  "Message sent successfully.": "Mensaje enviado con éxito."
 }
