--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -36,5 +36,6 @@
   "Send": "Enviar",
   "Role": "Áreas",
   "Team": "Equipe",
-  "Finished date": "Data de entrega"
+  "Finished date": "Data de entrega",
+  "Message sent successfully.": "Mensagem enviada com sucesso."
 }
