--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -30,12 +30,12 @@
   "UI Designer": "Diseñador de Interfaces",
   "Let's build amazing things together": "Vamos a crear cosas increibles juntos",
   "Contact us": "Entre en contacto",
-  "Your name": "Nombre",
-  "Your email": "E-mail",
-  "Your message": "Mensaje",
+  "Your name": "Su nombre",
+  "Your email": "Su e-mail",
+  "Your message": "Su mensaje",
   "Send": "Enviar",
-  "Role": "Areas",
+  "Role": "Áreas",
   "Team": "Equipo",
   "Finished date": "Fecha de entrega",
-  "Message sent successfully.": "Mensaje enviado con éxito."
+  "Message sent successfully.": "Mensaje enviado exitosamente."
 }
