--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,4 +1,31 @@
 {
+  "lang": "en",
+  "nav": {
+    "home": {
+      "label": "Home",
+      "url": "home"
+    },
+    "services": {
+      "label": "What we do",
+      "url": "what-we-do"
+    },
+    "portfolio": {
+      "label": "Our work",
+      "url": "our-work"
+    },
+    "about": {
+      "label": "Who we are",
+      "url": "who-we-are"
+    },
+    "blog": {
+      "label": "Blog",
+      "url": "blog"
+    },
+    "contact": {
+      "label": "Contact",
+      "url": "contact"
+    }
+  },
   "Lang": "en",
   "Home": "Home",
   "What we do": "What we do",
