:globe_with_meridians: applying changes from the previous commit
adapting the localization in Spanish and Portuguese to the new standard created - adds new fields to the CMS

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,4 +1,31 @@
 {
+  "lang": "es",
+  "nav": {
+    "home": {
+      "label": "Inicio",
+      "url": "inicio"
+    },
+    "services": {
+      "label": "Qué hacemos",
+      "url": "que-hacemos"
+    },
+    "portfolio": {
+      "label": "Nuestro trabajo",
+      "url": "nuestro-trabajo"
+    },
+    "about": {
+      "label": "Quienes somos",
+      "url": "quienes-somos"
+    },
+    "blog": {
+      "label": "Blog",
+      "url": "blog"
+    },
+    "contact": {
+      "label": "Contacto",
+      "url": "contacto"
+    }
+  },
   "Lang": "es",
   "Home": "Inicio",
   "What we do": "Qué hacemos",
