--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,5 +25,77 @@
       "label": "Contact",
       "url": "contact"
     }
+  },
+  "welcome": {
+    "title": "We are",
+    "lead": "A collective of creative minds located in Brazil with an international mindset.",
+    "primaryButton": {
+      "label": "Get in touch",
+      "url": "#contact"
+    },
+    "ghostButton": {
+      "label": "Our work",
+      "url": "#our-work"
+    }
+  },
+  "services": {
+    "title": "What we do",
+    "firstItem": {
+      "title": "We design",
+      "content": "Inspired by simplicity, we design elegant solutions in branding, advertising and UI/UX, crafting the strong presence your brand needs to make a difference."
+    },
+    "secondItem": {
+      "title": "We develop",
+      "content": "Your website on the first page. Using modern technologies, we develop powerful websites optimized to your public and your company needs."
+    },
+    "thirdItem": {
+      "title": "We write",
+      "content": "Your company is what it does; your brand is what it speaks. We craft strong, direct and compelling messages for all your communication needs."
+    },
+    "fourthItem": {
+      "title": "We localize",
+      "content": "Does your audience hablas español or fala português? We can help you reach them. We do more than just a simple translation: we adapt your tone to their native language."
+    },
+    "button": {
+      "label": "See how we do it",
+      "url": ""
+    }
+  },
+  "portfolio": {
+    "title": "Our work",
+    "items": {
+      "all": "All",
+      "webDesign": "Web design",
+      "branding": "Branding",
+      "socialMedia": "Social media",
+      "audiovisual": "Audiovisual"
+    },
+    "button": {
+      "label": "View more",
+      "url": ""
+    },
+    "itemPage": {
+      "role": "Role",
+      "team": "Team",
+      "finishedDate": "Finished date"
+    }
+  },
+  "about": {
+    "title": "Who we are",
+    "button": {
+      "label": "View more",
+      "url": ""
+    }
+  },
+  "contact": {
+    "title": "Let's build amazing things together",
+    "form": {
+      "title": "Contact us",
+      "name": "Your name",
+      "email": "Your email",
+      "message": "Your message",
+      "button": "Send",
+      "success": "Message sent successfully."
+    }
   }
 }
