:globe_with_meridians: complete replacement of i18next

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -87,6 +87,13 @@
       "url": ""
     }
   },
+  "blog": {
+    "title": "Blog",
+    "button": {
+      "label": "View more",
+      "url": ""
+    }
+  },
   "contact": {
     "title": "Let's build amazing things together",
     "form": {
