--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -87,6 +87,13 @@
       "url": ""
     }
   },
+  "blog": {
+    "title": "Blog",
+    "button": {
+      "label": "View more",
+      "url": ""
+    }
+  },
   "contact": {
     "title": "Vamos a crear cosas increibles juntos",
     "form": {
