:bug: fix link to the contact area in the PT version

--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -31,7 +31,7 @@
     "lead": "Um coletivo de mentes criativas localizado no Brasil com um mindset internacional.",
     "primaryButton": {
       "label": "Entre em contato",
-      "url": "#contact"
+      "url": "#contato"
     },
     "ghostButton": {
       "label": "Nosso trabalho",
