:globe_with_meridians: update h1 title in the PT version

--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -27,7 +27,7 @@
     }
   },
   "welcome": {
-    "title": "Nós somos a",
+    "title": "Somos a",
     "lead": "Um coletivo de mentes criativas localizado no Brasil com um mindset internacional.",
     "primaryButton": {
       "label": "Entre em contato",
