--- a/websites/marscollective.co/content/locales/en.json
+++ b/websites/marscollective.co/content/locales/en.json
@@ -67,5 +67,10 @@
       "button": "Send",
       "successMessage": "Message sent successfully."
     }
+  },
+  "notFoundPage": {
+    "title": "404:",
+    "message": "It looks like you're lost...",
+    "button": "Go back home 🏠"
   }
 }
