feat: add blog (#248)
* refactor: changes team area

* refactor: remove tags from blog posts

* feat: add plugins to blog posts

* feat: add new post

* chore: adds new scripts

* feat(wip): adds base blog structure

* fix: AnchorLink import

* fix: sitemap generation

* feat: add typing

* feat: adds animations to posts

* feat: add posts

--- a/content/locales/en.json
+++ b/content/locales/en.json
@@ -38,6 +38,9 @@
       "url": "#our-work"
     }
   },
+  "team": {
+    "title": "Who we are"
+  },
   "portfolio": {
     "title": "Our work",
     "items": {
@@ -55,6 +58,13 @@
       "role": "Role",
       "team": "Team",
       "finishedDate": "Finished date"
+    }
+  },
+  "blog": {
+    "title": "Blog",
+    "button": {
+      "label": "View more",
+      "url": ""
     }
   },
   "contact": {
