--- a/content/locales/pt.json
+++ b/content/locales/pt.json
@@ -38,6 +38,9 @@
       "url": "#our-work"
     }
   },
+  "team": {
+    "title": "Quem somos"
+  },
   "portfolio": {
     "title": "Nosso trabalho",
     "items": {
