refactor: mv services section to translation json

--- a/content/locales/en.json
+++ b/content/locales/en.json
@@ -38,6 +38,25 @@
       "url": "#our-work"
     }
   },
+  "services": {
+    "title": "What we do",
+    "design": {
+      "title": "We design",
+      "content": "Inspired by simplicity, we design elegant solutions in branding, advertising and UI/UX, crafting the strong presence your brand needs to make a difference."
+    },
+    "develop": {
+      "title": "We develop",
+      "content": "Your website on the first page. Using modern technologies, we develop powerful websites optimized to your public and your company needs."
+    },
+    "write": {
+      "title": "We write",
+      "content": "Your company is what it does; your brand is what it speaks. We craft strong, direct and compelling messages for all your communication needs."
+    },
+    "localize": {
+      "title": "We localize",
+      "content": "Does your audience hablas español or fala português? We can help you reach them. We do more than just a simple translation: we adapt your tone to their native language."
+    }
+  },
   "team": {
     "title": "Who we are"
   },
