--- a/content/locales/es.json
+++ b/content/locales/es.json
@@ -38,6 +38,25 @@
       "url": "#nuestro-trabajo"
     }
   },
+  "services": {
+    "title": "Qué hacemos",
+    "design": {
+      "title": "Diseño",
+      "content": "Inspirados en la simplicidad, proyectamos soluciones elegantes en branding, publicidad y UI/UX, creando la fuerte presencia que su marca necesita para hacer la diferencia."
+    },
+    "develop": {
+      "title": "Desarrollo Web",
+      "content": "Su website en la primera página de los motores de búsqueda. Usando tecnologías modernas, creamos websites poderosos y optimizados para su público y las necesidades de su negocio."
+    },
+    "write": {
+      "title": "Redacción",
+      "content": "Su empresa es lo que ella hace; su marca es lo que ella comunica. Desarrollamos mensajes fuortes, directas y convincentes para todas las necesidades de comunicación."
+    },
+    "localize": {
+      "title": "Traducciones",
+      "content": "Su público fala português o speak English? Te ayudamos a alcanzarlos. Hacemos más que una simple traducción: adaptamos su tono a la lengua de ellos."
+    }
+  },
   "team": {
     "title": "Quienes somos"
   },
