--- a/content/locales/pt.json
+++ b/content/locales/pt.json
@@ -38,6 +38,25 @@
       "url": "#our-work"
     }
   },
+  "services": {
+    "title": "O que fazemos",
+    "design": {
+      "title": "Design",
+      "content": "Inspirados na simplicidade, projetamos soluções elegantes em branding, publicidade e UI/UX, criando a forte presença que sua marca precisa para fazer a diferença."
+    },
+    "develop": {
+      "title": "Web design",
+      "content": "Seu site na primeira página. Usando tecnologias modernas, criamos sites poderosos e otimizados para o seu público e as necessidades do seu negócio."
+    },
+    "write": {
+      "title": "Redação",
+      "content": "Sua empresa é o que ela faz; sua marca é o que ela fala. Desenvolvemos mensagens fortes, diretas e convincentes para todas as suas necessidades de comunicação."
+    },
+    "localize": {
+      "title": "Traduções",
+      "content": "O seu público hablas español ou speak English? Nós te ajudamos a alcançá-los. Fazemos mais do que apenas uma simples tradução: adaptamos seu tom à língua deles."
+    }
+  },
   "team": {
     "title": "Quem somos"
   },
