--- a/content/locales/es.json
+++ b/content/locales/es.json
@@ -31,11 +31,11 @@
     "lead": "Un colectivo de mentes creativas localizado en Brasil, con una mentalidad internacional.",
     "buttonPrimary": {
       "label": "Entre en contacto",
-      "url": "#contacto"
+      "url": "/es/#contacto"
     },
     "buttonSecondary": {
       "label": "Nuestro trabajo",
-      "url": "#nuestro-trabajo"
+      "url": "/es/#nuestro-trabajo"
     }
   },
   "services": {
