--- a/content/locales/pt.json
+++ b/content/locales/pt.json
@@ -35,7 +35,7 @@
     },
     "buttonSecondary": {
       "label": "Nosso trabalho",
-      "url": "/pt/#our-work"
+      "url": "/pt/#nosso-trabalho"
     }
   },
   "services": {
